functional good performance RL

--- a/notebooks/modeling_pipeline.ipynb
+++ b/notebooks/modeling_pipeline.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -210,7 +210,7 @@
               "4              2223.0  "
             ]
           },
-          "execution_count": 2,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -407,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -464,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -524,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -557,7 +557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -617,7 +617,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -662,7 +662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -712,7 +712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -770,7 +770,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -792,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -850,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -908,7 +908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -978,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -1035,7 +1035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -1097,7 +1097,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -1150,15 +1150,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Using latest run: run_20251123_191151\n",
-            "✓ Output directory: ../results/run_20251123_191151/modeling\n"
+            "Using latest run: run_rl_20251129_194023\n",
+            "✓ Output directory: ../results/run_rl_20251129_194023/modeling\n"
           ]
         }
       ],
@@ -1185,7 +1185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -1229,7 +1229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -1261,7 +1261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -1303,7 +1303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -1323,7 +1323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -1337,7 +1337,7 @@
             "  ✓ feature_importance.png\n",
             "  ✓ multistep_forecast.png\n",
             "\n",
-            "✓ All plots saved to: ../results/run_20251123_191151/modeling/plots\n"
+            "✓ All plots saved to: ../results/run_rl_20251129_194023/modeling/plots\n"
           ]
         }
       ],
@@ -1496,7 +1496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -1507,7 +1507,7 @@
             "MODELING PIPELINE COMPLETE\n",
             "======================================================================\n",
             "\n",
-            "📁 Output Directory: ../results/run_20251123_191151/modeling\n",
+            "📁 Output Directory: ../results/run_rl_20251129_194023/modeling\n",
             "\n",
             "📊 Files Generated:\n",
             "  ✓ feature_cols.json                                  0.4 KB\n",
